Apply black-list extension filter to documents only.

BUG:249878

svn path=/trunk/KDE/kdegraphics/gwenview/; revision=1171476