lib/semanticinfo/sorteddirmodel.cpp
@@ -192,17 +192,19 @@ bool SortedDirModel::filterAcceptsRow(int row, const QModelIndex& parent) const 
 	QModelIndex index = d->mSourceModel->index(row, 0, parent);
 	KFileItem fileItem = d->mSourceModel->itemForIndex(index);
 
-	QString extension = fileItem.name().section('.', -1).toLower();
-	if (d->mBlackListedExtensions.contains(extension)) {
-		return false;
-	}
-
 	MimeTypeUtils::Kinds kind = MimeTypeUtils::fileItemKind(fileItem);
 	if (d->mKindFilter != MimeTypeUtils::Kinds() && !(d->mKindFilter & kind)) {
 		return false;
 	}
 
 	if (kind != MimeTypeUtils::KIND_DIR && kind != MimeTypeUtils::KIND_ARCHIVE) {
+		int dotPos = fileItem.name().lastIndexOf('.');
+		if (dotPos >= 1) {
+			QString extension = fileItem.name().mid(dotPos + 1).toLower();
+			if (d->mBlackListedExtensions.contains(extension)) {
+				return false;
+			}
+		}
 #ifndef GWENVIEW_SEMANTICINFO_BACKEND_NONE
 		if (!d->mSourceModel->semanticInfoAvailableForIndex(index)) {
 			Q_FOREACH(const AbstractSortedDirModelFilter* filter, d->mFilters) {
